@@ -16,6 +16,18 @@ Net::SSLeay::X509 class in L<SPVM> represents L<X509|https://docs.openssl.org/3.
 
   use Net::SSLeay::X509;
 
+=head1 Class Methods
+
+=head2 new
+
+C<static method new : L<Net::SSLeay::X509|SPVM::Net::SSLeay::X509> ();>
+
+Calls native L<X509_new|https://docs.openssl.org/1.0.2/man3/X509_new/> function, creates a new  L<Net::SSLeay::X509|SPVM::Net::SSLeay::X509> object, sets the pointer value of the object to the return value of the native function, and returns the new object.
+
+Exceptions:
+
+If X509_new failed, an exception is thrown with C<eval_error_id> set to the basic type ID of L<Net::SSLeay::Error|SPVM::Net::SSLeay::Error> class.
+
 =head1 Instance Methods
 
 =head2 get_issuer_name
