@@ -14,6 +14,8 @@ class Net::SSLeay::X509 : pointer {
   use Fn;
   
   # Class Methods
+  native static method new : Net::SSLeay::X509 ();
+  
   private static method new_with_pointer : Net::SSLeay::X509 ($pointer : Address, $options : object[] = undef) {
     
     my $self = new Net::SSLeay::X509;
