@@ -1,6 +1,8 @@
 0.025 2024-12-06
   [Incompatibe Changes]
     * Remove deprecated Net::SSLeay::X509#P_get_ocsp_uri method.
+  [New Features]
+    * Add Net::SSLeay::XX509#new method.
 0.024 2024-12-06
   [New Features]
     * Add Net::SSLeay::XX509_EXTENSION#new method.
